# serializer version: 1
# name: TestBuildCompileFixPrompt.test_includes_code_and_error
  '''
  You are an expert Python programmer. A Memory Program failed to compile or run.
  Fix the error and output the complete corrected code in a ```python``` block.
  
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  
  Rules:
  1. Output ONLY the corrected code in a ```python``` block. No explanation needed.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
  4. Make minimal changes — fix only what's broken.
  
  ## Broken Code
  
  ```python
  class Memory: pass
  ```
  
  ## Error
  
  **Syntax error**: unexpected indent at line 5
  
  Fix the error and output the complete corrected code in a ```python``` block.
  '''
# ---
# name: TestBuildCompileFixPrompt.test_includes_error_type_label
  '''
  You are an expert Python programmer. A Memory Program failed to compile or run.
  Fix the error and output the complete corrected code in a ```python``` block.
  
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  
  Rules:
  1. Output ONLY the corrected code in a ```python``` block. No explanation needed.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Only use allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb.
  4. Make minimal changes — fix only what's broken.
  
  ## Broken Code
  
  ```python
  x
  ```
  
  ## Error
  
  **Import whitelist violation**: Disallowed import: numpy
  
  Fix the error and output the complete corrected code in a ```python``` block.
  '''
# ---
# name: TestBuildObservationGenerationPrompt.test_includes_text_and_schema
  '''
  Given the following text, create an Observation object to store this information in memory.
  
  Text: Paris is the capital.
  
  The Observation must conform to this schema:
  Fields:
    - raw: str
  
  Output ONLY a valid JSON object matching the schema fields. No explanation.
  '''
# ---
# name: TestBuildObservationWithFeedbackPrompt.test_includes_feedback_and_ground_truth
  '''
  Evaluation result: Score: 0.0 (incorrect)
  Ground truth: Paris
  
  Based on this feedback, generate an observation to write into memory.
  
  The observation must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildObservationWithFeedbackPrompt.test_includes_ground_truth_label
  '''
  Evaluation result: ok
  Ground truth: 42
  
  Based on this feedback, generate an observation to write into memory.
  
  The observation must be a JSON object matching this schema:
  schema
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildQueryGenerationPrompt.test_includes_question_and_schema
  '''
  Given the following question, generate a query to retrieve relevant memory.
  
  Question: What is the capital?
  
  The query must be a JSON object matching this schema:
  Fields:
    - raw: str
  
  Respond with the JSON only.
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_handles_empty_optional_fields
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.500</evaluation_score>
  
  <failed_cases>
  <case id="1">
  <question>q</question>
  <expected>a</expected>
  <got>o</got>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_all_cases
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  <failed_cases>
  <case id="1">
  <question>q0</question>
  <expected>a0</expected>
  <got>wrong</got>
  <score>0.0</score>
  </case>
  
  <case id="2">
  <question>q1</question>
  <expected>a1</expected>
  <got>wrong</got>
  <score>0.0</score>
  </case>
  
  <case id="3">
  <question>q2</question>
  <expected>a2</expected>
  <got>wrong</got>
  <score>0.0</score>
  </case>
  
  <case id="4">
  <question>q3</question>
  <expected>a3</expected>
  <got>wrong</got>
  <score>0.0</score>
  </case>
  
  <case id="5">
  <question>q4</question>
  <expected>a4</expected>
  <got>wrong</got>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_code_and_score
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="3">
  ```python
  class Memory: pass
  ```
  </current_program>
  
  <evaluation_score>0.420</evaluation_score>
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_failed_cases
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="1">
  ```python
  code here
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  <failed_cases>
  <case id="1">
  <question>What is X?</question>
  <expected>42</expected>
  <got>unknown</got>
  <score>0.0</score>
  <conversation>
    [user]: What is X?
    [assistant]: unknown
  </conversation>
  <memory_logs>
    - Stored: fact about X
    - Query: What is X
  </memory_logs>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
# name: TestBuildReflectionUserPrompt.test_includes_train_examples
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="1">
  ```python
  class Memory: pass
  ```
  </current_program>
  
  <evaluation_score>0.100</evaluation_score>
  
  <train_examples>
  <example id="1">
  [user]: Given the following text...
  Text: Hello world
  Schema: {"raw": "..."}
  [assistant]: {"raw": "Hello world"}
  </example>
  </train_examples>
  
  <failed_cases>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_empty_retrieved
  '''
  <retrieved_memory>
  
  </retrieved_memory>
  
  Based on the above memory and the original question, provide your answer.
  '''
# ---
# name: TestBuildRetrievedMemoryPrompt.test_includes_retrieved_in_tags
  '''
  <retrieved_memory>
  fact1
  fact2
  </retrieved_memory>
  
  Based on the above memory and the original question, provide your answer.
  '''
# ---
# name: TestReflectionPromptConfig.test_default_config
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  <failed_cases>
  <case id="1">
  <question>q</question>
  <expected>a</expected>
  <got>o</got>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
# name: TestReflectionPromptConfig.test_max_memory_log_chars_zero_excludes
  '''
  You are an expert Python programmer specializing in memory system design.
  
  Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
  
  <interface_spec>
  You are designing a Memory Program that implements three classes:
  
  1. **Observation** (dataclass): Defines what information is captured when writing to memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
     - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
     - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
  
  2. **Query** (dataclass): Defines what parameters are used when reading from memory.
     - Must be a @dataclass with typed fields
     - An external LLM will populate instances by generating JSON matching your field definitions
     - Same JSON-compatible type restriction and field description support as Observation
  
  3. **Memory** (class): The core memory system.
     - `__init__(self, toolkit)`: Receives a Toolkit with:
       - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
       - `toolkit.chroma`: chromadb ephemeral client
       - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
       - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
     - `write(self, observation: Observation) -> None`: Store information
     - `read(self, query: Query) -> str`: Retrieve relevant information as a string
  
  Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
  
  ## Runtime Constraints
  
  These limits are enforced during evaluation. Violating them results in score = 0.
  
  - **`read()` output limit**: `memory.read()` must return at most **1000 characters**. Programs that dump all stored text will fail.
  - **`write()` / `read()` timeout**: Each call must complete within **5 seconds**. Avoid expensive computation in these methods.
  - **`toolkit.llm_completion()` budget**: At most **50 LLM calls** per evaluation run. Use LLM calls sparingly in write/read; prefer deterministic retrieval (SQL, text matching) over LLM-based filtering.
  
  </interface_spec>
  
  <rules>
  1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
  2. The code must define exactly three classes: Observation, Query, Memory.
  3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
  4. `read()` must return at most 1000 characters — do not return all stored text.
  5. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
  </rules>
  
  <current_program iteration="1">
  ```python
  x
  ```
  </current_program>
  
  <evaluation_score>0.000</evaluation_score>
  
  <failed_cases>
  <case id="1">
  <question>q</question>
  <expected>a</expected>
  <got>o</got>
  <score>0.0</score>
  </case>
  
  </failed_cases>
  
  <task>
  1. Diagnose why these cases fail.
  2. Propose specific improvements to the Memory Program.
  3. Output the complete improved code in a ```python``` block.
  </task>
  '''
# ---
